zero-schema-macros/tests/ui/fail/07_tag_field_missing_value.rs
use zero_schema_macros::zero;

#[zero(crate = zs)]
struct MissingTagFieldValue {
    #[zero(tag_field =)]
    payload: Payload,
}

struct Payload;

fn main() {}
